Package_Tools/include-C/Ubuntu_26.04/glib-2.0/glib/in_arbeit/h/gtestutils.h

#define __G_TEST_UTILS_H__
typedef void (*GTestFunc)        (void);
typedef void (*GTestDataFunc)    (gconstpointer user_data);
extern
int     g_strcmp0                       (const char     *str1,
                                         const char     *str2);
/* report performance results */
extern
void    g_test_minimized_result         (double          minimized_quantity,
                                         const char     *format,
                                         ...) ;
 
extern
void    g_test_maximized_result         (double          maximized_quantity,
                                         const char     *format,
                                         ...) ;
 

/* initialize testing framework */
extern
void    g_test_init                     (int            *argc,
                                         char         ***argv,
                                         ...) ;
/**
 * G_TEST_OPTION_ISOLATE_DIRS:
 *
 * A value that can be passed as an option to [func@GLib.test_init].
 *
 * Creates a unique temporary directory for each unit test and uses sets
 * XDG directories to point into subdirectories of it for the duration of
 * the unit test. The directory tree is cleaned up after the test finishes
 * successfully.
 *
 * Note that this doesn’t take effect until [func@GLib.test_run] is called,
 * so calls to (for example) [func@GLib.get_home_dir] will return the
 * system-wide value when made in a test program’s main() function.
 *
 * The following functions will return subdirectories of the temporary directory
 * when this option is used. The specific subdirectory paths in use are not
 * guaranteed to be stable API — always use a getter function to retrieve them.
 *
 *  - [func@GLib.get_home_dir]
 *  - [func@GLib.get_user_cache_dir]
 *  - [func@GLib.get_system_config_dirs]
 *  - [func@GLib.get_user_config_dir]
 *  - [func@GLib.get_system_data_dirs]
 *  - [func@GLib.get_user_data_dir]
 *  - [func@GLib.get_user_state_dir]
 *  - [func@GLib.get_user_runtime_dir]
 *
 * The subdirectories may not be created by the test harness; as with normal
 * calls to functions like [func@GLib.get_user_cache_dir], the caller must
 * be prepared to create the directory if it doesn’t exist.
 *
 * Since: 2.60
 */
#define G_TEST_OPTION_ISOLATE_DIRS "isolate_dirs"
/**
 * G_TEST_OPTION_NO_PRGNAME:
 *
 * A value that can be passed as an option to [func@GLib.test_init].
 *
 * If this option is given, [func@GLib.test_init] will not call [func@GLib.set_prgname].
 *
 * Since: 2.84
 */
#define G_TEST_OPTION_NO_PRGNAME "no_g_set_prgname"
/**
 * G_TEST_OPTION_NONFATAL_ASSERTIONS:
 *
 * A value that can be passed as an option to [func@GLib.test_init].
 *
 * If this option is given, assertions will not abort the process, but
 * call [func@GLib.test_fail]. Equivalent to [func@GLib.test_set_nonfatal_assertions].
 *
 * Since: 2.84
 */
#define G_TEST_OPTION_NONFATAL_ASSERTIONS "nonfatal-assertions"
/* While we discourage its use, g_assert() is often used in unit tests
 * (especially in legacy code). g_assert_*() should really be used instead.
 * g_assert() can be disabled at client program compile time, which can render
 * tests useless. Highlight that to the user. */

/* query testing framework config */
#define g_test_initialized()            (g_test_config_vars->test_initialized)
#define g_test_quick()                  (g_test_config_vars->test_quick)
#define g_test_slow()                   (!g_test_config_vars->test_quick)
#define g_test_thorough()               (!g_test_config_vars->test_quick)
#define g_test_perf()                   (g_test_config_vars->test_perf)
#define g_test_verbose()                (g_test_config_vars->test_verbose)
#define g_test_quiet()                  (g_test_config_vars->test_quiet)
#define g_test_undefined()              (g_test_config_vars->test_undefined)
extern
gboolean g_test_subprocess (void);
/* run all tests under toplevel suite (path: /) */
extern
int     g_test_run                      (void);
/* hook up a test functions under test path */
extern
void    g_test_add_func                 (const char     *testpath,
                                         GTestFunc       test_func);
extern
void    g_test_add_data_func            (const char     *testpath,
                                         gconstpointer   test_data,
                                         GTestDataFunc   test_func);
extern
void    g_test_add_data_func_full       (const char     *testpath,
                                         gpointer        test_data,
                                         GTestDataFunc   test_func,
                                         GDestroyNotify  data_free_func);
/* tell about currently run test */
extern
const char * g_test_get_path            (void);
/* tell about failure */
extern
void    g_test_fail                     (void);
extern
void    g_test_fail_printf              (const char *format,
                                         ...) ;
 
extern
void    g_test_incomplete               (const gchar *msg);
extern
void    g_test_incomplete_printf        (const char *format,
                                         ...) ;
 
extern
void    g_test_skip                     (const gchar *msg);
extern
void    g_test_skip_printf              (const char *format,
                                         ...) ;
 
extern
gboolean g_test_failed                  (void);
extern
void    g_test_set_nonfatal_assertions  (void);
extern
void    g_test_disable_crash_reporting  (void);
extern
void    g_test_message                  (const char *format,
                                         ...) ;
 
extern
void    g_test_bug_base                 (const char *uri_pattern);
extern
void    g_test_bug                      (const char *bug_uri_snippet);
extern
void    g_test_summary                  (const char *summary);
/* measure test timings */
extern
void    g_test_timer_start              (void);
extern
double  g_test_timer_elapsed            (void); /* elapsed seconds */
extern
double  g_test_timer_last               (void); /* repeat last elapsed() result */
/* automatically g_free or g_object_unref upon teardown */
extern
void    g_test_queue_free               (gpointer gfree_pointer);
extern
void    g_test_queue_destroy            (GDestroyNotify destroy_func,
                                         gpointer       destroy_data);
#define g_test_queue_unref(gobject)     g_test_queue_destroy (g_object_unref, gobject)
/**
 * GTestTrapFlags:
 * @G_TEST_TRAP_DEFAULT: Default behaviour. Since: 2.74
 * @G_TEST_TRAP_SILENCE_STDOUT: Redirect stdout of the test child to
 *     `/dev/null` so it cannot be observed on the console during test
 *     runs. The actual output is still captured though to allow later
 *     tests with g_test_trap_assert_stdout().
 * @G_TEST_TRAP_SILENCE_STDERR: Redirect stderr of the test child to
 *     `/dev/null` so it cannot be observed on the console during test
 *     runs. The actual output is still captured though to allow later
 *     tests with g_test_trap_assert_stderr().
 * @G_TEST_TRAP_INHERIT_STDIN: If this flag is given, stdin of the
 *     child process is shared with stdin of its parent process.
 *     It is redirected to `/dev/null` otherwise.
 *
 * Flags to pass to [func@GLib.test_trap_fork] to control input and output.
 *
 * Test traps are guards around forked tests. These flags determine what traps to set.
 *
 * Deprecated: 2.38: `GTestTrapFlags` is used only with [func@GLib.test_trap_fork],
 *   which is deprecated. Its replacement, [func@GLib.test_trap_subprocess] uses
 *   [flags@GLib.TestSubprocessFlags].
 */
typedef enum {
  G_TEST_TRAP_DEFAULT  = 0,
  G_TEST_TRAP_SILENCE_STDOUT    = 1 << 7,
  G_TEST_TRAP_SILENCE_STDERR    = 1 << 8,
  G_TEST_TRAP_INHERIT_STDIN     = 1 << 9
}  GTestTrapFlags ;
extern //xxxxxextern //xxxxxextern //xxxxxextern //xxxxxextern //xxxxxextern //xxxxxextern //xxxxxextern //xxxxxextern //xxxxxextern //xxxxxGLIB_DEPRECATED_IN_2_38_FOR (g_test_trap_subprocess)
gboolean g_test_trap_fork               (guint64              usec_timeout,
                                         GTestTrapFlags       test_trap_flags);
typedef enum {
  G_TEST_SUBPROCESS_DEFAULT = 0,
  G_TEST_SUBPROCESS_INHERIT_STDIN  = 1 << 0,
  G_TEST_SUBPROCESS_INHERIT_STDOUT = 1 << 1,
  G_TEST_SUBPROCESS_INHERIT_STDERR = 1 << 2,
  G_TEST_SUBPROCESS_INHERIT_DESCRIPTORS  = 1 << 3,
}  GTestSubprocessFlags;
extern
void     g_test_trap_subprocess         (const char           *test_path,
                                         guint64               usec_timeout,
                                         GTestSubprocessFlags  test_flags);
extern
void     g_test_trap_subprocess_with_envp (const char           *test_path,
                                           const char * const   *envp,
                                           guint64               usec_timeout,
                                           GTestSubprocessFlags  test_flags);
extern
gboolean g_test_trap_has_passed         (void);
extern
gboolean g_test_trap_has_skipped        (void);
extern
gboolean g_test_trap_reached_timeout    (void);
/* provide seed-able random numbers for tests */
#define  g_test_rand_bit()              (0 != (g_test_rand_int() & (1 << 15)))